New kill button to delete all database objects for a recognized target. This should help us to more quickly and easily clean out junk objects in our databases.

--- a/res/layout-land/camera_overlay.xml
+++ b/res/layout-land/camera_overlay.xml
@@ -146,5 +146,15 @@
         android:layout_alignParentRight="true"
         android:background="@drawable/augdone_button_background"
         android:visibility="invisible" />
+    
+    <Button
+        android:id="@+id/delete_target"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:text="DELETE"
+        android:background="@color/ucsb_gold"
+        android:visibility="invisible" />
 
 </RelativeLayout>
