Beginning of code for both local targets and stopping a user from using app without internet

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -44,6 +44,15 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="30dp" />
+
+        <Button
+            android:id="@+id/btnOntopFB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="#0000" />
+
     </RelativeLayout>
 
     <Button
